--- a/app/src/main/res/layout/activity_encryption.xml
+++ b/app/src/main/res/layout/activity_encryption.xml
@@ -18,7 +18,7 @@
         android:text="ENCRYPTION"
         android:textSize="40dp"
         android:gravity="center"
-        android:textColor="@color/white" />
+        android:textColor="#FFA9A8E6" />
     <TextView
         android:id="@+id/TextView_EnterPassword_Encryption"
         android:layout_marginLeft="20dp"
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Enter Password:"
-        android:textColor="@color/white" />
+        android:textColor="#FFA9A8E6" />
     <EditText
         android:id="@+id/EditText_EnterPassword_Encryption"
         android:layout_marginLeft="20dp"
@@ -36,6 +36,9 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/edittext_background"
+        android:padding="5dip"
+        android:textColor="@color/black"
+        android:inputType="textPassword"
         />
     <TextView
         android:id="@+id/TextView_EnterKey_Encryption"
@@ -45,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Enter 16 Letter Key:"
-        android:textColor="@color/white" />
+        android:textColor="#FFA9A8E6" />
     <EditText
         android:id="@+id/EditText_EnterKey_Encryption"
         android:layout_marginLeft="20dp"
@@ -54,6 +57,9 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/edittext_background"
+        android:padding="5dip"
+        android:textColor="@color/black"
+        android:inputType="textPassword"
         />
     <Button
         android:id="@+id/Button_EnterKey_Encryption"
@@ -64,6 +70,7 @@
         android:layout_height="50dp"
         android:background="@drawable/button_background"
         android:text="ENCRYPT"
+        android:textColor="#C1C1F1"
 
         />
     <TextView
@@ -74,7 +81,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Encrypted Text:"
-        android:textColor="@color/white" />
+        android:textColor="#FFA9A8E6" />
     <EditText
         android:id="@+id/EditText_EncryptedText_Encryption"
         android:layout_marginLeft="20dp"
@@ -83,6 +90,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/edittext_background"
+        android:padding="5dip"
+        android:textColor="@color/black"
         />
 
 
