--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="@color/black"
+    android:background="#2c2c54"
     >
     <TextView
         android:layout_width="wrap_content"
@@ -17,14 +17,14 @@
 
         android:text="PASSWORD"
         android:textSize="40dp"
-        android:textColor="#FFEB3B"/>
+        android:textColor="#706fd3"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo_id"
         android:text="CRYPTO CONVERTER"
         android:textSize="30dp"
-        android:textColor="#FFEB3B"/>
+        android:textColor="#706fd3"/>
     <TextView
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
@@ -33,7 +33,7 @@
         android:fontFamily="casual"
         android:text="Developed By"
         android:textSize="20dp"
-        android:textColor="#FFEB3B"/>
+        android:textColor="#FFA9A8E6"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,7 +41,7 @@
         android:fontFamily="casual"
         android:text="Saif Khan"
         android:textSize="30dp"
-        android:textColor="#FFEB3B"/>
+        android:textColor="#A9A8E6"/>
 
 
 </LinearLayout>
